--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
 
     <color name="on_click_grey">#6F818181</color>
     <color name="red">#CC1609</color>
+    <color name="transparent">#00FFFFFF</color>
 
 </resources>
