--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,5 +34,6 @@
 
     <dimen name="toolbar_text_size">22dp</dimen>
     <dimen name="toolbar_icon_size">32dp</dimen>
+    <dimen name="thumb_size">32dp</dimen>
 
 </resources>
