--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                 android:layout_width="76dp"
                 android:layout_height="38dp"
                 android:background="@drawable/bg_switch_thumb"
-                android:checkedButton="@+id/rb_imperial"
+                android:checkedButton="@+id/rb_metric"
                 android:orientation="horizontal"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -127,7 +127,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-                tools:context=".ui.MainActivity">
+                tools:context=".ui.weather.WeatherActivity">
 
                 <LinearLayout
                     android:layout_width="match_parent"
