--- a/app/src/main/res/layout/item_hourly_forecast.xml
+++ b/app/src/main/res/layout/item_hourly_forecast.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="42dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_min_temp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_temp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="vertical"
@@ -49,7 +49,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_min_temp"
+        android:id="@+id/tv_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
