--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -454,7 +454,7 @@
 
     <ProgressBar
         android:id="@+id/pb_loading"
-        style="@style/progres_bar_style"
+        style="@style/progress_bar_style"
         android:layout_marginBottom="10dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tv_message"
