--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -98,7 +98,7 @@
         <item name="android:textSize">@dimen/small_text_size</item>
     </style>
 
-    <style name="progres_bar_style">
+    <style name="progress_bar_style">
         <item name="android:layout_width">70dp</item>
         <item name="android:layout_height">70dp</item>
     </style>
